// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders theme dark 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-0:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-13 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-13 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-14 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #212529;
  color: #ffffff;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-14 section {
  position: relative;
}

.emotion-14 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-2:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff91b8;
  color: #212529;
}

.emotion-3:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-3:hover {
  background: #ff88b9;
}

.emotion-3:active {
  background: #e46fa1;
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #ff94ff;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #7feab5;
  color: #212529;
}

.emotion-4:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-4:hover {
  background: #66edaf;
}

.emotion-4:active {
  background: #49d396;
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #00ffd7;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff9c61;
  color: #212529;
}

.emotion-5:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-5:hover {
  background: #ff9753;
}

.emotion-5:active {
  background: #e3803c;
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #ffc200;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff9d89;
  color: #212529;
}

.emotion-6:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-6:hover {
  background: #ff9680;
}

.emotion-6:active {
  background: #e47e69;
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #ffb16a;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #82d9ef;
  color: #212529;
}

.emotion-7:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-7:hover {
  background: #59ddfa;
}

.emotion-7:active {
  background: #36c3e0;
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #00ffff;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #515458;
  color: #ffffff;
}

.emotion-8:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-8:hover {
  background: #3c3f43;
}

.emotion-8:active {
  background: #303337;
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0089e1;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 8px;
}

.emotion-9:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-10 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-10:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-12 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  color: black;
  background: peachpuff;
}

.emotion-12:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-12:hover,
.emotion-12:active {
  color: white;
  background: orangered;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #e599f7;
  color: #333;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-11:hover {
  background: #ec93ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:active {
  background: #d27be5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #ffa5ff;
}

<body>
    <div>
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Show 
              light
               mode
            </span>
          </button>
        </div>
        <section
          class="emotion-13"
        >
          <button
            class="emotion-2"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Default Button
            </span>
          </button>
          <button
            class="emotion-3"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="emotion-4"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="emotion-5"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="emotion-6"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="emotion-7"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="emotion-8"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="emotion-9"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="emotion-10"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="emotion-11"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
          <button
            class="emotion-12"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom css button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": .emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-0:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-13 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-13 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-14 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #212529;
  color: #ffffff;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-14 section {
  position: relative;
}

.emotion-14 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-2:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff91b8;
  color: #212529;
}

.emotion-3:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-3:hover {
  background: #ff88b9;
}

.emotion-3:active {
  background: #e46fa1;
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #ff94ff;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #7feab5;
  color: #212529;
}

.emotion-4:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-4:hover {
  background: #66edaf;
}

.emotion-4:active {
  background: #49d396;
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #00ffd7;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff9c61;
  color: #212529;
}

.emotion-5:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-5:hover {
  background: #ff9753;
}

.emotion-5:active {
  background: #e3803c;
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #ffc200;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #ff9d89;
  color: #212529;
}

.emotion-6:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-6:hover {
  background: #ff9680;
}

.emotion-6:active {
  background: #e47e69;
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #ffb16a;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #82d9ef;
  color: #212529;
}

.emotion-7:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-7:hover {
  background: #59ddfa;
}

.emotion-7:active {
  background: #36c3e0;
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #00ffff;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #515458;
  color: #ffffff;
}

.emotion-8:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-8:hover {
  background: #3c3f43;
}

.emotion-8:active {
  background: #303337;
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0089e1;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 8px;
}

.emotion-9:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-10 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-10:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-12 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  color: black;
  background: peachpuff;
}

.emotion-12:hover {
  background: #abb6ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:active {
  background: #929ee5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:focus {
  box-shadow: 0 0px 8px #a9e8ff;
}

.emotion-12:hover,
.emotion-12:active {
  color: white;
  background: orangered;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #e599f7;
  color: #333;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-11:hover {
  background: #ec93ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:active {
  background: #d27be5;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #ffa5ff;
}

<div>
    <div
      class="emotion-14"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Show 
            light
             mode
          </span>
        </button>
      </div>
      <section
        class="emotion-13"
      >
        <button
          class="emotion-2"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Default Button
          </span>
        </button>
        <button
          class="emotion-3"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="emotion-5"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="emotion-6"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="emotion-7"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="emotion-8"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="emotion-9"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="emotion-10"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="emotion-11"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
        <button
          class="emotion-12"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom css button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders theme light 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-14 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #ffffff;
  color: #212529;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-14 section {
  position: relative;
}

.emotion-14 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-0:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-13 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-13 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-2:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #C2255C;
  color: #ffffff;
}

.emotion-3:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-3:hover {
  background: #cd005b;
}

.emotion-3:active {
  background: #b10046;
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #ff0080;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #008658;
  color: #ffffff;
}

.emotion-4:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-4:hover {
  background: #008852;
}

.emotion-4:active {
  background: #00713d;
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #00c55f;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #C93700;
  color: #ffffff;
}

.emotion-5:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-5:hover {
  background: #d12a00;
}

.emotion-5:active {
  background: #b40000;
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #ff0000;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #e03131;
  color: #ffffff;
}

.emotion-6:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-6:hover {
  background: #ea1929;
}

.emotion-6:active {
  background: #cc0015;
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #ff0029;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #00788C;
  color: #ffffff;
}

.emotion-7:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-7:hover {
  background: #007b96;
}

.emotion-7:active {
  background: #00657f;
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #00b9fd;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #dee2e6;
  color: #212529;
}

.emotion-8:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-8:hover {
  background: #c5c9cd;
}

.emotion-8:active {
  background: #b6babe;
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #ffd5ff;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 8px;
}

.emotion-9:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-12 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  color: black;
  background: peachpuff;
}

.emotion-12:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-12:hover,
.emotion-12:active {
  color: white;
  background: orangered;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #862E9C;
  color: #f8f0fc;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-11:hover {
  background: #8b23a5;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:active {
  background: #72008d;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #da00ff;
}

<body>
    <div>
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Show 
              dark
               mode
            </span>
          </button>
        </div>
        <section
          class="emotion-13"
        >
          <button
            class="emotion-2"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Default Button
            </span>
          </button>
          <button
            class="emotion-3"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="emotion-4"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="emotion-5"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="emotion-6"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="emotion-7"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="emotion-8"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="emotion-9"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="emotion-11"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
          <button
            class="emotion-12"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom css button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": .emotion-14 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #ffffff;
  color: #212529;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-14 section {
  position: relative;
}

.emotion-14 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 4px 8px;
  font-size: 0.875rempx;
}

.emotion-0:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-13 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-13 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-2:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #C2255C;
  color: #ffffff;
}

.emotion-3:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-3:hover {
  background: #cd005b;
}

.emotion-3:active {
  background: #b10046;
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #ff0080;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #008658;
  color: #ffffff;
}

.emotion-4:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-4:hover {
  background: #008852;
}

.emotion-4:active {
  background: #00713d;
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #00c55f;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #C93700;
  color: #ffffff;
}

.emotion-5:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-5:hover {
  background: #d12a00;
}

.emotion-5:active {
  background: #b40000;
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #ff0000;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #e03131;
  color: #ffffff;
}

.emotion-6:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-6:hover {
  background: #ea1929;
}

.emotion-6:active {
  background: #cc0015;
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #ff0029;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #00788C;
  color: #ffffff;
}

.emotion-7:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-7:hover {
  background: #007b96;
}

.emotion-7:active {
  background: #00657f;
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #00b9fd;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  background: #dee2e6;
  color: #212529;
}

.emotion-8:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-8:hover {
  background: #c5c9cd;
}

.emotion-8:active {
  background: #b6babe;
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #ffd5ff;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  padding: 8px;
}

.emotion-9:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-12 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  color: black;
  background: peachpuff;
}

.emotion-12:hover {
  background: #235ae9;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:active {
  background: #0045cf;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-12:focus {
  box-shadow: 0 0px 8px #0081ff;
}

.emotion-12:hover,
.emotion-12:active {
  color: white;
  background: orangered;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #862E9C;
  color: #f8f0fc;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.25s ease-in-out,background 0.3s ease-in;
  -webkit-transition: transform 0.25s ease-in-out,background 0.3s ease-in;
  transition: transform 0.25s ease-in-out,background 0.3s ease-in;
}

.emotion-11:hover {
  background: #8b23a5;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:active {
  background: #72008d;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rebeccapurple;
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #da00ff;
}

<div>
    <div
      class="emotion-14"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Show 
            dark
             mode
          </span>
        </button>
      </div>
      <section
        class="emotion-13"
      >
        <button
          class="emotion-2"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Default Button
          </span>
        </button>
        <button
          class="emotion-3"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="emotion-5"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="emotion-6"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="emotion-7"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="emotion-8"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="emotion-9"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="emotion-11"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
        <button
          class="emotion-12"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom css button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
